test resources(templates, views) 생성

--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta http-euqiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+  <p th:text="'hello-template: ' + ${name}"> hello-template:empty.</p>
 </body>
 </html>
